kube/api.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: apiingressroute
  namespace: default

spec:
  entryPoints:
    - web

  routes:
  - match: Host(`nutri.kameron.io`) && PathPrefix(`/api`)
    kind: Rule
    services:
    - name: api
      port: 8081

---
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  ports:
  - name: http
    port: 8081
  selector:
    app: meal-tracker
    task: api

---
kind: Deployment
apiVersion: apps/v1
metadata:
  annotations:
  creationTimestamp: null
  labels:
    app: meal-tracker
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: meal-tracker
      task: api
  strategy: {}
  template:
    metadata:
      annotations:
      creationTimestamp: null
      labels:
        app: meal-tracker
        task: api
    spec:
      containers:
      - name: api
        image: normak458/meal-tracker_api:v0.0.1
        imagePullPolicy: IfNotPresent #Always #IfNotPresent
        ports:
        - containerPort: 8081
        resources: {}
      restartPolicy: Always
      volumes: null
status: {}
